Mostly finished implementing portfolios. need to fix grid and layout issue on portfolio page. Functionality is ok. Changed button animations.

--- a/src/Styles/AboutPage.scss
+++ b/src/Styles/AboutPage.scss
@@ -34,7 +34,7 @@
     .btn
     {
       padding: 1rem 2rem;
-      background-color: var(--main-color);
+      background-color: var(--main-color-hover);
       box-shadow: var(--card-shadow);
       border: none;
       outline: none;
@@ -46,7 +46,7 @@
       letter-spacing: 2px;
       margin-top: 1rem;
       position: relative;
-
+      transition: all .3s ease-in-out;
       &::after
       {
         position: absolute;
@@ -56,11 +56,23 @@
         left: 0;
         bottom: 0;
         background-color: var(--font-color2);
-        transition: all .4s ease-in-out;
+        transition: all .3s ease-in-out;
       }
       &:hover::after
       {
         width: 100%;
+      }
+      &:active::after
+      {
+        width: 100%;
+      }
+      &:focus::after
+      {
+        width: 100%;
+      }
+      &:hover
+      {
+        background-color: var(--main-color);
       }
     }
   }
